--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=
-STYLE_SETTINGS_BODY_CLASSES=
+STYLE_SETTINGS_CSS=body.css-settings-manager { --h1-size: 3em; --h1-font: Mr Eaves SC Remake Medium; --h1-weight: 400; } body.theme-light.css-settings-manager { --base-h: 47.99999999999993; --base-s: 12.820512820512825%; --base-l: 77.05882352941177%; --bg1: #F8F6EE; --ax1: #BA337A; --tx1: #4A3C30; } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless obsidian-app show-inline-title show-ribbon show-view-header minimal-theme minimal-default-light minimal-default-dark minimal-readable css-settings-manager is-maximized minimal-light minimal-dark links-int-on links-ext-on full-width-media minimal-folding chart-default-width table-default-width img-default-width iframe-default-width map-wide theme-light callouts-default trim-cols checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default tab-names-off ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover is-focused
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/Elhary/obsidian-Pale/HEAD/theme.css
 BASE_THEME=light
