--- a/.env
+++ b/.env
@@ -9,11 +9,9 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=
-STYLE_SETTINGS_BODY_CLASSES=
+STYLE_SETTINGS_CSS=body.css-settings-manager { --titlebar-text-weight: 600; --tag-radius: 0px; --h1-font: MR Eaves SC Remake Medium; --h1-size: 24pt; --blockquote-font-style: normal; --h2-font: MR Eaves SC Remake Medium; --h2-size: 20pt; --h3-font: MR Eaves SC Remake Medium; --h3-size: 16pt; --h3-weight: 400; --cursor: default; } body.theme-light.css-settings-manager { --frame-background-h: 24.999999999999996; --frame-background-s: 75.9493670886076%; --frame-background-l: 30.98039215686274%; --frame-background-a: 1; --frame-icon-color: #FDE7D7; --titlebar-text-color-focused: #FDE7D7; --titlebar-text-color: #FDE7D7; --tx1: #4A3C30; --hl1: #F741A1; --hl2: #F741A1; --minimal-tab-text-color: #FDE7D7; --minimal-tab-text-color-active: #4A3C30; --link-color: #BA337A; --link-color-hover: #E33D94; --ax1: #BA337A; --ax3: #BA337A; --ax2: #E33D94; --blockquote-border-color: #8B4513; --blockquote-background-color: #FDE7D7; --blockquote-color: #4A3C30; --bg1: #F8F6EE; --bg2: #FFEDDF; --tx2: #4A3C30; --tx3: #8B4513; } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless obsidian-app show-inline-title show-ribbon show-view-header minimal-theme minimal-default-light minimal-default-dark minimal-readable css-settings-manager theme-light minimal-light minimal-dark colorful-frame links-int-on links-ext-on full-width-media minimal-folding chart-default-width table-default-width img-default-width iframe-default-width map-wide is-maximized callouts-default trim-cols h2-l checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light metadata-heading-off sidebar-tabs-underline tab-names-off ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover window-title-off is-focused
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/radekkozak/discordian/HEAD/theme.css
-BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
